# hid_defender

./: .flake8  .gitignore  DASHBOARD_IMPLEMENTATION.md  PROJECT_GUIDE.md  README.md  hid_defender.py  pyproject.toml  run.py  simple_defender.py  test_simulation.py  trusted_devices_example.json  whitelist.json
dashboard/: app.py
dashboard/static/: dashboard.js  styles.css
dashboard/templates/: index.html  layout.html
data/: trusted_devices.json
docs/: project_guide.md
scripts/: install_autostart.ps1  simulate_attacks.py
src/: __init__.py  device_validator.py  keystroke_monitor.py  logging_setup.py
src/hid_defender/: __init__.py  __main__.py  alert_system.py  cli.py  config.py  device_monitor.py  device_validator.py  keystroke_monitor.py  logging_setup.py
src/hid_defender/dashboard/: app.py  data_manager.py  monitor.py  test_manager.py
src/hid_defender/dashboard/static/: dashboard.js  styles.css  tests.css  tests.js
src/hid_defender/dashboard/templates/: index.html  layout.html  tests.html
tests/: README.md  conftest.py  test_alerts.py  test_dashboard_app.py  test_device_detection.py  test_integration.py  test_keystroke_monitoring.py  test_logging.py  test_new_scenarios.py  test_system_cases.py  test_system_startup.py  test_unit_cases.py
